--- a/PO/phpMussel-de.po
+++ b/PO/phpMussel-de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
-"Project-Id-Version: phpMussel v0.9.0\n"
+"Project-Id-Version: phpMussel v0.9.2\n"
 
 # "bad_command"
 msgid "I don't understand that command, sorry."
@@ -395,8 +395,8 @@ msgid "signatures"
 msgstr "Signaturen"
 
 # "upload_error_1"
-msgid "Filesize exceeds MAX_FILE_SIZE directive. "
-msgstr "Dateigröße überschreitet die Richtlinie MAX_FILE_SIZE. "
+msgid "Filesize exceeds the upload_max_filesize directive. "
+msgstr "Dateigröße überschreitet die Richtlinie upload_max_filesize. "
 
 # "upload_error_2"
 msgid "Filesize exceeds form-specified filesize limit. "
