--- a/PO/phpMussel-en-SOURCE.pot
+++ b/PO/phpMussel-en-SOURCE.pot
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en\n"
-"Project-Id-Version: phpMussel v0.9.0\n"
+"Project-Id-Version: phpMussel v0.9.2\n"
 
 # "bad_command"
 msgid "I don't understand that command, sorry."
@@ -395,7 +395,7 @@ msgid "signatures"
 msgstr ""
 
 # "upload_error_1"
-msgid "Filesize exceeds MAX_FILE_SIZE directive. "
+msgid "Filesize exceeds the upload_max_filesize directive. "
 msgstr ""
 
 # "upload_error_2"
