--- a/PO/phpMussel-es.po
+++ b/PO/phpMussel-es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
-"Project-Id-Version: phpMussel v0.9.0\n"
+"Project-Id-Version: phpMussel v0.9.2\n"
 
 # "bad_command"
 #, fuzzy
@@ -488,13 +488,13 @@ msgstr "firmas"
 
 # "upload_error_1"
 #, fuzzy
-msgid "Filesize exceeds MAX_FILE_SIZE directive. "
-msgstr "Fichero tamaño excede MAX_FILE_SIZE directiva. "
+msgid "Filesize exceeds the upload_max_filesize directive. "
+msgstr "Fichero tamaño excede la directiva upload_max_filesize. "
 
 # "upload_error_2"
 #, fuzzy
 msgid "Filesize exceeds form-specified filesize limit. "
-msgstr "Fichero tamaño excede forma especificada fichero tamaño límite. "
+msgstr "Fichero tamaño excede la forma especificada fichero tamaño límite. "
 
 # "upload_error_34"
 #, fuzzy
