--- a/PO/phpMussel-fr.po
+++ b/PO/phpMussel-fr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fr\n"
-"Project-Id-Version: phpMussel v0.9.0\n"
+"Project-Id-Version: phpMussel v0.9.2\n"
 
 # "bad_command"
 #, fuzzy
@@ -488,13 +488,13 @@ msgstr "signatures"
 
 # "upload_error_1"
 #, fuzzy
-msgid "Filesize exceeds MAX_FILE_SIZE directive. "
-msgstr "Fichier taille dépasse MAX_FILE_SIZE directive. "
+msgid "Filesize exceeds the upload_max_filesize directive. "
+msgstr "Fichier taille dépasse la directive upload_max_filesize. "
 
 # "upload_error_2"
 #, fuzzy
 msgid "Filesize exceeds form-specified filesize limit. "
-msgstr "Fichier taille dépasse forme spécifiée fichier taille limite. "
+msgstr "Fichier taille dépasse la forme spécifiée fichier taille limite. "
 
 # "upload_error_34"
 #, fuzzy
