--- a/PO/phpMussel-id.po
+++ b/PO/phpMussel-id.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: id\n"
-"Project-Id-Version: phpMussel v0.9.0\n"
+"Project-Id-Version: phpMussel v0.9.2\n"
 
 # "bad_command"
 #, fuzzy
@@ -488,8 +488,8 @@ msgstr "tanda tangan"
 
 # "upload_error_1"
 #, fuzzy
-msgid "Filesize exceeds MAX_FILE_SIZE directive. "
-msgstr "File ukuran melebihi MAX_FILE_SIZE direktif. "
+msgid "Filesize exceeds the upload_max_filesize directive. "
+msgstr "File ukuran melebihi direktif upload_max_filesize. "
 
 # "upload_error_2"
 #, fuzzy
