--- a/PO/phpMussel-ja.po
+++ b/PO/phpMussel-ja.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ja\n"
-"Project-Id-Version: phpMussel v0.9.0\n"
+"Project-Id-Version: phpMussel v0.9.2\n"
 
 # "bad_command"
 #, fuzzy
@@ -488,8 +488,8 @@ msgstr "署名"
 
 # "upload_error_1"
 #, fuzzy
-msgid "Filesize exceeds MAX_FILE_SIZE directive. "
-msgstr "ファイルサイズは、「MAX_FILE_SIZE」ディレクティブを超えています。"
+msgid "Filesize exceeds the upload_max_filesize directive. "
+msgstr "ファイルサイズは、「upload_max_filesize」ディレクティブを超えています。"
 
 # "upload_error_2"
 #, fuzzy
