--- a/PO/phpMussel-nl.po
+++ b/PO/phpMussel-nl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: nl\n"
-"Project-Id-Version: phpMussel v0.9.0\n"
+"Project-Id-Version: phpMussel v0.9.2\n"
 
 # "bad_command"
 #, fuzzy
@@ -488,13 +488,13 @@ msgstr "handtekeningen"
 
 # "upload_error_1"
 #, fuzzy
-msgid "Filesize exceeds MAX_FILE_SIZE directive. "
-msgstr "Bestandsgrootte overschrijdt MAX_FILE_SIZE richtlijn. "
+msgid "Filesize exceeds the upload_max_filesize directive. "
+msgstr "Bestandsgrootte overschrijdt de upload_max_filesize richtlijn. "
 
 # "upload_error_2"
 #, fuzzy
 msgid "Filesize exceeds form-specified filesize limit. "
-msgstr "Bestandsgrootte overschrijdt vorm gespecificeerde bestandsgrootte limiet. "
+msgstr "Bestandsgrootte overschrijdt de vorm gespecificeerde bestandsgrootte limiet. "
 
 # "upload_error_34"
 #, fuzzy
