--- a/PO/phpMussel-pt.po
+++ b/PO/phpMussel-pt.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pt\n"
-"Project-Id-Version: phpMussel v0.9.0\n"
+"Project-Id-Version: phpMussel v0.9.2\n"
 
 # "bad_command"
 #, fuzzy
@@ -488,13 +488,13 @@ msgstr "assinaturas"
 
 # "upload_error_1"
 #, fuzzy
-msgid "Filesize exceeds MAX_FILE_SIZE directive. "
-msgstr "Arquivo tamanho excede MAX_FILE_SIZE directiva. "
+msgid "Filesize exceeds the upload_max_filesize directive. "
+msgstr "Arquivo tamanho excede a directiva upload_max_filesize. "
 
 # "upload_error_2"
 #, fuzzy
 msgid "Filesize exceeds form-specified filesize limit. "
-msgstr "Arquivo tamanho excede formulário especificados arquivo tamanho limite. "
+msgstr "Arquivo tamanho excede o formulário especificados arquivo tamanho limite. "
 
 # "upload_error_34"
 #, fuzzy
