--- a/PO/phpMussel-ru.po
+++ b/PO/phpMussel-ru.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"Project-Id-Version: phpMussel v0.9.0\n"
+"Project-Id-Version: phpMussel v0.9.2\n"
 
 # "bad_command"
 #, fuzzy
@@ -488,8 +488,8 @@ msgstr "подписи"
 
 # "upload_error_1"
 #, fuzzy
-msgid "Filesize exceeds MAX_FILE_SIZE directive. "
-msgstr "Файл превышает размер директивы MAX_FILE_SIZE. "
+msgid "Filesize exceeds the upload_max_filesize directive. "
+msgstr "Файл превышает размер директивы upload_max_filesize. "
 
 # "upload_error_2"
 #, fuzzy
