--- a/PO/phpMussel-vi.po
+++ b/PO/phpMussel-vi.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: vi\n"
-"Project-Id-Version: phpMussel v0.9.0\n"
+"Project-Id-Version: phpMussel v0.9.2\n"
 
 # "bad_command"
 msgid "I don't understand that command, sorry."
@@ -395,8 +395,8 @@ msgid "signatures"
 msgstr "Những chữ ký"
 
 # "upload_error_1"
-msgid "Filesize exceeds MAX_FILE_SIZE directive. "
-msgstr "Cỡ của tài liệu quá giới hạn MAX_FILE_SIZE chỉ dẫn. "
+msgid "Filesize exceeds the upload_max_filesize directive. "
+msgstr "Cỡ của tài liệu quá giới hạn upload_max_filesize chỉ dẫn. "
 
 # "upload_error_2"
 msgid "Filesize exceeds form-specified filesize limit. "
