--- a/PO/phpMussel-zh.po
+++ b/PO/phpMussel-zh.po
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh\n"
-"Project-Id-Version: phpMussel v0.9.0\n"
+"Project-Id-Version: phpMussel v0.9.2\n"
 
 # "bad_command"
 #, fuzzy
@@ -489,8 +489,8 @@ msgstr "签名"
 
 # "upload_error_1"
 #, fuzzy
-msgid "Filesize exceeds MAX_FILE_SIZE directive. "
-msgstr "文件大小超过MAX_FILE_SIZE指令。"
+msgid "Filesize exceeds the upload_max_filesize directive. "
+msgstr "文件大小超过upload_max_filesize指令。"
 
 # "upload_error_2"
 #, fuzzy
