--- a/PO/phpMussel-ja.po
+++ b/PO/phpMussel-ja.po
@@ -13,95 +13,95 @@ msgstr ""
 # "bad_command"
 #, fuzzy
 msgid "I don't understand that command, sorry."
-msgstr "私はそのコマンドがわかりません、ごめんなさい。"
+msgstr "すみませんが、コマンドが理解できません。"
 
 # "cli_commands"
 # This is a list of commands supplied to the user by the program. Only change command descriptions! Don't change command aliases/names!
 #, fuzzy
 msgid " q\n - Quit CLI.\n - Aliases: quit, exit.\n md5_file\n - Generate MD5 signatures from files [Syntax: md5_file filename].\n - Alias: m.\n md5\n - Generate MD5 signature from string [Syntax: md5 string].\n hex_encode\n - Convert binary string to hexadecimal [Syntax: hex_encode string].\n - Alias: x.\n hex_decode\n - Convert hexadecimal to binary string [Syntax: hex_decode string].\n base64_encode\n - Convert binary string to base64 string [Syntax: base64_encode string].\n - Alias: b.\n base64_decode\n - Convert base64 string to binary string [Syntax: base64_decode string].\n scan\n - Scan file or directory [Syntax: scan filename].\n - Alias: s.\n update\n - Update phpMussel.\n - Alias: u.\n c\n - Print this command list.\n"
-msgstr " q\n - CLIを終了します。\n - エイリアス： quit, exit.\n md5_file\n - ファイルからMD5署名を生成します 「構文: md5_file ファイル名」。\n - エイリアス： m.\n md5\n - データからのMD5署名を生成します 「構文: md5 データ」。\n hex_encode\n - バイナリデータから16進数データへを変換します 「構文: hex_encode バイナリデータ」。\n - エイリアス： x.\n hex_decode\n - バイナリデータから16進数データへを変換します 「構文: hex_decode 16進数データ」。\n base64_encode\n - バイナリデータからベース64データへを変換します 「構文: base64_encode バイナリデータ」。\n - エイリアス： b.\n base64_decode\n - ベース64データからバイナリデータへを変換します 「構文: base64_decode ベース64データ」。\n scan\n - スキャンファイルまたはディレクトリ 「構文: scan ファイル名」。\n - エイリアス： s.\n update\n - phpMusselアップデートします。\n - エイリアス： u.\n c\n - このコマンドリストを表示します。\n"
+msgstr " q\n - CLI終了。\n - エイリアス：quit，exit。\n md5_file\n - ファイルからMD5署名を作成 「構文: md5_file ファイル名」。\n - エイリアス： m。\n md5\n - 文字列からMD5署名を作成 「構文: md5 string」。\n hex_encode\n - ２進法文字列を１６進法文字列に変換 「構文: hex_encode string」。\n - エイリアス： x。\n hex_decode\n - １６進法文字列を２進法文字列に変換 「構文: hex_decode string」。\n base64_encode\n - ２進法文字列をBASE６４文字列に変換 「構文: base64_encode string」。\n - エイリアス： b。\n base64_decode\n - BASE６４文字列を２進法文字列に変換 「構文: base64_decode string」。\n scan\n - ファイルまたはディレクトリをスキャン 「構文: scan ファイル名」。\n - エイリアス：s。\n update\n - phpMusselをアップデート。\n - エイリアス： u。\n c\n - コマンドリストをプリント。\n"
 
 # "cli_failed_to_complete"
 #, fuzzy
 msgid "Failed to complete scanning process"
-msgstr "スキャンプロセス完了できませんでした"
+msgstr "スキャンを完了できませんでした"
 
 # "cli_is_not_a"
 # Rendered as "%FILENAME% is not a file or directory."
 #, fuzzy
 msgid " is not a file or directory."
-msgstr "ファイルまたはディレクトリはありません。"
+msgstr "はファイルでもディレクトリでもありません。"
 
 # "cli_ln2"
 #, fuzzy
 msgid " Thank you for using phpMussel, a PHP script designed to detect trojans,\n viruses, malware and other threats within files uploaded to your system\n wherever the script is hooked, based on the signatures of ClamAV and others.\n\n PHPMUSSEL COPYRIGHT 2013 and beyond GNU/GPLv2 by Caleb M (Maikuolan).\n\n                                     ~ ~ ~\n\n"
-msgstr " phpMusselをご利用いただきありがとうございます！PHPスクリプトがために設計されています：検出のトロイの木馬、ウイルス、マルウェア、やその他の脅威、\n （どこファイルがシステムにアップロードされました、どこスクリプトが接続されました）。 ClamAV署名や他人に基づいています。\n\n PHPMUSSEL 著作権 2013 や以降です、GNU/GPLv2です、カレブによって作成（Maikuolan）。\n\n                                     ~ ~ ~\n\n"
+msgstr " phpMussel（ピー・エイチ・ピー・マッスル）のご愛顧に感謝します。phpMusselは、トロイの木馬型をはじめ、\n各種ウィルス、マルウェアがアップロードファイルからシステムに侵入しようとするのを検知するよう設計されたPHPスクリプトです。\n\nClamAVやその他の署名に基づきシステム内のどこに配置されても機能します。PHPMUSSEL2013以降の著作権は全てCaleb M (Maikuolan)氏によるGNU/GPLv2 に帰属します。\n\n                                     ~ ~ ~\n\n"
 
 # "cli_ln3"
 #, fuzzy
 msgid " Currently running phpMussel in CLI mode (command line interface).\n\n To scan a file or directory, type 'scan', followed by the name of the file or\n directory that you want phpMussel to scan and press Enter; Type 'c' and press\n Enter for a list of CLI mode commands; Type 'q' and press Enter to quit:"
-msgstr " phpMusselは、現在のCLIモード（コマンドラインインターフェース）で動作しています。\n\n ファイルまたはディレクトリをスキャンするには、入力「scan」、ファイルまたはディレクトリの名前、その後、Enterキーを押しますしてください；\n CLIモードのリストコマンドについては、入力し「c」とEnterキーを押します； 終了については、入力し「q」とEnterキーを押します："
+msgstr " CLIモード（コマンドラインインターフェイス）でphpMusselを実行中です。\n\n ファイルまたはディレクトリ―をスキャンするには、’スキャン’とタイプし、続けてファイル名\n またはディレクトリ名をタイプしてエンターを押して下さい。\n CLIモードコマンドのリストを得るには’c’とタイプしてエンターを押して下さい；終了には'q'とタイプしてエンターを押します。 "
 
 # "cli_pe1"
 #, fuzzy
 msgid "Not a valid PE file!"
-msgstr "有効なPEファイルではありません！"
+msgstr "正しいPEファイルではありません！"
 
 # "cli_pe2"
 #, fuzzy
 msgid "PE Sections:"
-msgstr "PE セクション："
+msgstr "PEセクション："
 
 # "cli_update_restart"
 #, fuzzy
 msgid " Restarting phpMussel may be required before updates become apparent."
-msgstr " アップデートが明らかになるためには、再起動phpMusselが必要な場合があります。"
+msgstr " アップデートを有効にするためにはphpMusselを再スタートする必要があるかもしれません。"
 
 # "cli_working"
 #, fuzzy
 msgid "In progress"
-msgstr "進行中"
+msgstr "処理中"
 
 # "controls_lockout"
 #, fuzzy
 msgid "phpMussel controls lockout enabled."
-msgstr "「phpMussel」はコントロールロックアウトはアクティブです。"
+msgstr "phpMusselコントロールロックアウトが有効です。"
 
 # "core_scriptfile_missing"
 #, fuzzy
 msgid "Core script file missing! Please reinstall phpMussel."
-msgstr "コアスクリプトファイルはありません！「phpMussel」を再インストールしてください、お願いします。"
+msgstr "重要なスクリプトファイルがありません。phpMusselを再インストールして下さい。"
 
 # "corrupted"
 #, fuzzy
 msgid "Detected corrupted PE"
-msgstr "検出されたPEが破損しました"
+msgstr "破損PEを検出しました"
 
 # "denied"
 #, fuzzy
 msgid "Upload Denied!"
-msgstr "アップロード拒否されました！"
+msgstr "アップロード拒否！"
 
 # "denied_reason"
 #, fuzzy
 msgid "Your upload was blocked for the reasons listed below"
-msgstr "アップロードは次の原因で拒否されました"
+msgstr "以下の理由でアップロードは拒否されました"
 
 # "detected"
 # Don't remove "{vn}"; Just translate "Detected". This string is used by the program to report to the user when something is detected. For example, if the program detects a virus named "V1rus123", {vn} will be populated by the name and the program will return (using the string) a message like "Detected V1rus123!"
 #, fuzzy
 msgid "Detected {vn}"
-msgstr "検出された{vn}"
+msgstr "{vn}を検出しました"
 
 # "detected_control_characters"
 #, fuzzy
 msgid "Detected control characters"
-msgstr "検出された制御文字"
+msgstr "制御文字を検出しました"
 
 # "encrypted_archive"
 #, fuzzy
 msgid "Detected encrypted archive; Encrypted archives not permitted"
-msgstr "検出された暗号化されたアーカイブ; 暗号化されたアーカイブは許可されていません"
+msgstr "暗号化されたアーカイブ検出：暗号化されたアーカイブは許可されていません"
 
 # "failed_to_access"
 # Rendered as "Failed to access %FILENAME%"
@@ -117,33 +117,33 @@ msgstr "ファイル"
 # "filesize_limit_exceeded"
 #, fuzzy
 msgid "Filesize limit exceeded"
-msgstr "ファイルサイズリミットを超えました"
+msgstr "容範囲外ファイルサイズです"
 
 # "filetype_blacklisted"
 #, fuzzy
 msgid "Filetype blacklisted"
-msgstr "ファイルタイプはブラックリストに掲載されています"
+msgstr "ファイルタイプがブラックリスト記載です"
 
 # "finished"
 #, fuzzy
 msgid "Finished"
-msgstr "終了しました"
+msgstr "完了"
 
 # "generated_by"
 # Rendered as "Generated by %PROGRAM-NAME%"
 #, fuzzy
 msgid "Generated by"
-msgstr "によって搭載しました"
+msgstr "作成者"
 
 # "greylist_cleared"
 #, fuzzy
 msgid " Greylist cleared."
-msgstr " グレーリストがクリアされました。"
+msgstr " グレーリストが解除されました。"
 
 # "greylist_not_updated"
 #, fuzzy
 msgid " Greylist not updated."
-msgstr " グレーリストがアップデートされません。"
+msgstr " グレーリストがアップデートされていません。"
 
 # "greylist_updated"
 #, fuzzy
@@ -158,142 +158,142 @@ msgstr "画像"
 # "instance_already_active"
 #, fuzzy
 msgid "Instance already active! Please double-check your hooks."
-msgstr "インスタンスすでにアクティブ！あなたのフックをダブルチェックしてください。"
+msgstr "インスタンスが既にアクティブです！フックを再確認して下さい。"
 
 # "invalid_file"
 #, fuzzy
 msgid "Invalid file"
-msgstr "無効なファイル"
+msgstr "不正ファイル"
 
 # "invalid_url"
 #, fuzzy
 msgid "Invalid URL!"
-msgstr "無効なURL！"
+msgstr "不正URL！"
 
 # "ok"
 msgid "OK"
-msgstr "大丈夫です"
+msgstr "OKです"
 
 # "only_allow_images"
 #, fuzzy
 msgid "Uploading files other than images isn't permitted"
-msgstr "画像以外のファイルアップロードは許可されません"
+msgstr "画像以外のファイルをアップロードするのは許可されていません"
 
 # "phpmussel_disabled"
 #, fuzzy
 msgid "phpMussel disabled."
-msgstr "「phpMussel」は非アクティブです。"
+msgstr "phpMusselはオフです。"
 
 # "phpmussel_disabled_already"
 #, fuzzy
 msgid "phpMussel already disabled."
-msgstr "「phpMussel」はすでに非アクティブです。"
+msgstr "phpMusselはすでにオフの状態です。"
 
 # "phpmussel_enabled"
 #, fuzzy
 msgid "phpMussel enabled."
-msgstr "「phpMussel」はアクティブです。"
+msgstr "phpMusselはオンです。"
 
 # "phpmussel_enabled_already"
 #, fuzzy
 msgid "phpMussel already enabled."
-msgstr "「phpMussel」はすでにアクティブです。"
+msgstr "phpMusselは既にオンです。"
 
 # "plugins_directory_nonexistent"
 #, fuzzy
 msgid "Plugins directory doesn't exist!"
-msgstr "プラグインディレクトリが存在しません！"
+msgstr "プラグインデイレクトリが存在しません！"
 
 # "recursive"
 #, fuzzy
 msgid "Recursion depth limit exceeded"
-msgstr "再帰深さリミットを超えました"
+msgstr "再帰定義呼び出しの繰り返し回数が上限を超えました"
 
 # "required_variables_not_defined"
 #, fuzzy
 msgid "Required variables aren't defined: Can't continue."
-msgstr "必要な変数が定義されていません；続行できません。"
+msgstr "リクエストのあった変数は定義されていないため、続行できません。"
 
 # "scan_aborted"
 #, fuzzy
 msgid "Scanning aborted!"
-msgstr "スキャンは中断されました！"
+msgstr "スキャニング中断！"
 
 # "scan_chameleon"
 # Don't remove "{x}".
 #, fuzzy
 msgid "{x} chameleon attack detected"
-msgstr "検出された{x}カメレオン攻撃"
+msgstr "{x} Chameleon（カメレオン）攻撃が検出されました"
 
 # "scan_checking"
 #, fuzzy
 msgid "Checking"
-msgstr "検証は進行中"
+msgstr "チェック中"
 
 # "scan_checking_contents"
 #, fuzzy
 msgid "Success! Proceeding to check contents."
-msgstr "成功！内容を確認します。"
+msgstr "成功！コンテンツをチェックしています。"
 
 # "scan_command_injection"
 #, fuzzy
 msgid "Command injection attempt detected"
-msgstr "コマンドインジェクションの試みが検出されました"
+msgstr "コマンドインジェクション攻撃が検出されました"
 
 # "scan_complete"
 #, fuzzy
 msgid "Complete"
-msgstr "完成しました"
+msgstr "完了"
 
 # "scan_extensions_missing"
 #, fuzzy
 msgid "Failed (missing required extensions)!"
-msgstr "失敗しました（必要な拡張機能が欠落しています）！"
+msgstr "失敗（要求のあった拡張子がありません）！"
 
 # "scan_filename_manipulation_detected"
 #, fuzzy
 msgid "Filename manipulation detected"
-msgstr "検出されたファイル名改ざん"
+msgstr "ファイルネイム不正操作が検出されました"
 
 # "scan_map_corrupted"
 #, fuzzy
 msgid "Signature map corrupted"
-msgstr "署名地図が破損しました"
+msgstr "署名マップが汚染されています"
 
 # "scan_map_missing"
 #, fuzzy
 msgid "Signature map missing"
-msgstr "署名地図はありません"
+msgstr "署名マップがありません"
 
 # "scan_missing_filename"
 #, fuzzy
 msgid "Missing filename"
-msgstr "ファイル名はありません"
+msgstr "ファイル名が存在しません"
 
 # "scan_not_archive"
 #, fuzzy
 msgid "Failed (empty or not an archive)!"
-msgstr "失敗しました（空です、または、アーカイブではありません）！"
+msgstr "失敗（中身が存在しないかアーカイブではありません）！"
 
 # "scan_no_problems_found"
 #, fuzzy
 msgid "No problems found."
-msgstr "問題は見つかりませんでした。"
+msgstr "問題は検出されませんでした。"
 
 # "scan_reading"
 #, fuzzy
 msgid "Reading"
-msgstr "読んでいます"
+msgstr "読み込んでいます"
 
 # "scan_signature_file_corrupted"
 #, fuzzy
 msgid "Signature file corrupted"
-msgstr "署名ファイルが破損しました"
+msgstr "読み込んでいます"
 
 # "scan_signature_file_missing"
 #, fuzzy
 msgid "Signature file missing"
-msgstr "署名ファイルはありません"
+msgstr "署名ファイルがありません"
 
 # "scan_tampering"
 #, fuzzy
@@ -313,27 +313,27 @@ msgstr "不正ファイルアップロード改ざんまたはミスコンフィ
 # "started"
 #, fuzzy
 msgid "Started"
-msgstr "開始しました"
+msgstr "開始しています"
 
 # "too_many_urls"
 #, fuzzy
 msgid "Too many URLs"
-msgstr "あまりにも多くのURL"
+msgstr "URLが多すぎます"
 
 # "update_"
 #, fuzzy
 msgid "phpMussel will now attempt to update itself."
-msgstr "phpMusselは現在、自身をアップデートしようとします。"
+msgstr "phpMusselは自動アップデート中です。"
 
 # "update_available"
 #, fuzzy
 msgid "A script update is available."
-msgstr "スクリプトアップデートが利用可能です。"
+msgstr "スクリプトのアップデートが可能です。"
 
 # "update_complete"
 #, fuzzy
 msgid "Update check completed successfully."
-msgstr "アップロードチェックは成功しました。"
+msgstr "アップデートのチェックが完了しました。"
 
 # "update_created"
 # Rendered alongside filenames to declare the state of the file, eg, "%FILENAME% created".
@@ -345,42 +345,42 @@ msgstr "作成"
 # Rendered alongside filenames to declare the state of the file, eg, "%FILENAME% deleted".
 #, fuzzy
 msgid "deleted"
-msgstr "削除"
+msgstr "消去"
 
 # "update_err1"
 #, fuzzy
 msgid "Failed to update: 'update.dat' missing. Reinstall or update manually."
-msgstr "アップデートに失敗しました：「update.dat」はありません。再インストールしてください、または手動でのアップデート、お願いします。"
+msgstr "アップデート失敗： \'update.dat\'がありません。手動で再インストールして下さい。"
 
 # "update_err2"
 #, fuzzy
 msgid "Failed to update: 'update.dat' does not contain any valid update sources. Please update manually."
-msgstr "アップデートに失敗しました：「update.dat」は有効なアップデート元が含ましていません。手動でのアップデート、お願いします。"
+msgstr "アップデート失敗： \'update.dat\'に有効なアップデートソースがありません。手動で再インストールして下さい。"
 
 # "update_err3"
 #, fuzzy
 msgid "Possible hack or forgery detected in the update instructions supplied by the update source; Source may possibly be compromised. Please notify the script author. Updating manually is recommended."
-msgstr "アップデート元により供給されました、アップデート手順で、疑わハックや偽造が検出されました；元が潜在的に危険にさらさ。スクリプトの作成者に通知ください、お願いします。手動でのアップデートは推奨されます。"
+msgstr "アップデート元が提供するアップデート指示がハックされたか偽造された疑いがあります。ソースがウィルス感染している恐れがあります。スクリプト作成者に連絡して下さい。手動でのアップデートを推奨します。"
 
 # "update_err4"
 #, fuzzy
 msgid "Missing checksum!"
-msgstr "チェックサムはありません！"
+msgstr "チェックサムがありません！"
 
 # "update_err5"
 #, fuzzy
 msgid "Missing data!"
-msgstr "データはありません！"
+msgstr "データがありません！"
 
 # "update_err6"
 #, fuzzy
 msgid "Bad data!"
-msgstr "データ悪いです！"
+msgstr "不正データです！"
 
 # "update_err7"
 #, fuzzy
 msgid "Bad checksum!"
-msgstr "チェックサム悪いです！"
+msgstr "不正チェックサムです！"
 
 # "update_failed"
 #, fuzzy
@@ -390,33 +390,33 @@ msgstr "失敗しました。"
 # "update_fetch"
 #, fuzzy
 msgid "Attempting to fetch version data from"
-msgstr "バージョン情報が取得されますから"
+msgstr "{Location}からバージョン情報の取得を試みています。。。"
 
 # "update_lock_detected"
 #, fuzzy
 msgid "Update lock detected: Can't continue. Check for corrupt updates or try again later."
-msgstr "アップデートロックが検出されました；続行できません。破損したアップデート探してまたは後でもう一度試しますください。"
+msgstr "アップデートロックが検出されたため、継続できません。破損したアップデートがないかチェックし、再度試みて下さい。"
 
 # "update_not"
 # Used with "created", "deleted" and "patched" to negate them. Only translate the "NOT", don't remove the "{x}". Rendered like "%FILENAME% NOT created", "%FILENAME% NOT deleted", "%FILENAME% NOT patched".
 #, fuzzy
 msgid "NOT {x}"
-msgstr "{x}されませんでした"
+msgstr "{x}に失敗しました"
 
 # "update_not_available"
 #, fuzzy
 msgid "No script update is available at this time."
-msgstr "現時点では、スクリプトアップデートが利用できません。"
+msgstr "アップデート可能なスクリプトはありません。"
 
 # "update_not_possible"
 #, fuzzy
 msgid "A script update is available, but can't be fully updated with this version of the update script. Please update manually."
-msgstr "スクリプトアップデートが利用可能です、しかし、アップデートスクリプトのこのバージョンから、それは完全にアップデートができません。手動でのアップデート、お願いします。"
+msgstr "アップデート可能なスクリプトがありますが、このバージョンでは完全にはできません。手動でアップデートして下さい。"
 
 # "update_no_source"
 #, fuzzy
 msgid "phpMussel has failed to update itself because it could not connect to a valid update source. Updating manually is recommended."
-msgstr "phpMusselは、有効なアップデート元に接続できなかったため、自身のアップデートに失敗しました。手動でのアップデートは推奨されます。"
+msgstr "有効なアップデートソースに接続できなかったため、phpMusselは自動アップデートに失敗しました。手動でのアップデートを推奨します。"
 
 # "update_patched"
 # Rendered alongside filenames to declare the state of the file, eg, "%FILENAME% patched".
@@ -427,28 +427,28 @@ msgstr "パッチ"
 # "update_scriptfile_missing"
 #, fuzzy
 msgid " Update script file missing! Please reinstall phpMussel."
-msgstr " アップデートスクリプトファイルはありません！「phpMussel」を再インストールしてください、お願いします。"
+msgstr " アップデートスクリプトファイルがありません。phpMusselを再インストールして下さい。"
 
 # "update_seconds_elapsed"
 # Rendered alongside integer second timers, eg, "5 seconds elapsed".
 #, fuzzy
 msgid " seconds elapsed"
-msgstr "秒が経過しました"
+msgstr "秒経過"
 
 # "update_signatures_available"
 #, fuzzy
 msgid "A signatures update is available."
-msgstr "署名アップデートが利用可能です。"
+msgstr "署名アップデートが可能です。"
 
 # "update_signatures_latest"
 #, fuzzy
 msgid "LATEST SIGNATURES"
-msgstr "最新の署名"
+msgstr "署名最新版"
 
 # "update_signatures_not_available"
 #, fuzzy
 msgid "No signatures update is available at this time."
-msgstr "現時点では、署名アップデートが利用できません。"
+msgstr "現在署名アップデートはできません。"
 
 # "update_signatures_yours"
 #, fuzzy
@@ -458,22 +458,22 @@ msgstr "あなたの署名"
 # "update_success"
 #, fuzzy
 msgid "Success."
-msgstr "成功。"
+msgstr "成功です。"
 
 # "update_successfully"
 #, fuzzy
 msgid " successfully"
-msgstr "成功"
+msgstr "　問題なく"
 
 # "update_version_latest"
 #, fuzzy
 msgid "LATEST SCRIPT VERSION"
-msgstr "最新のスクリプト·バージョン"
+msgstr "最新スクリプトバージョン"
 
 # "update_version_yours"
 #, fuzzy
 msgid "YOUR SCRIPT VERSION"
-msgstr "あなたのスクリプト·バージョン"
+msgstr "あなたのスクリプトバージョン"
 
 # "update_was"
 # Used with "created", "deleted" and "patched" to affirm them ({x} will be substituted with one of those words by the program; don't remove it). Useful for languages that make use of a specific particle or word to affirm a verb which is separate from its negative (or "NOT") form (such as Japanese, for example). Because we don't use this in English (the source language), only the {x} exists. You won't need to translate this if your language also doesn't use this.
@@ -489,48 +489,48 @@ msgstr "署名"
 # "upload_error_1"
 #, fuzzy
 msgid "Filesize exceeds the upload_max_filesize directive. "
-msgstr "ファイルサイズは、「upload_max_filesize」ディレクティブを超えています。"
+msgstr "指示された最大アップロードファイルサイズを超えています。"
 
 # "upload_error_2"
 #, fuzzy
 msgid "Filesize exceeds form-specified filesize limit. "
-msgstr "ファイルサイズは、フォーム指定ファイルサイズの上限を超えています。"
+msgstr "フォームのファイルサイズ上限を超えています。"
 
 # "upload_error_34"
 #, fuzzy
 msgid "Upload failure! Please contact the hostmaster for assistance! "
-msgstr "アップロードの失敗！支援のためのホストマスタに連絡してください！"
+msgstr "アップロード失敗！ホスト責任者に相談して下さい！"
 
 # "upload_error_6"
 #, fuzzy
 msgid "Upload directory missing! Please contact the hostmaster for assistance! "
-msgstr "アップロードのディレクトリが存在しません！支援のためのホストマスタに連絡してください！"
+msgstr "アップロードディレクトリがありません！ホスト責任者に相談して下さい！"
 
 # "upload_error_7"
 #, fuzzy
 msgid "Disc-write error! Please contact the hostmaster for assistance! "
-msgstr "ディスク書き込みエラー！支援のためのホストマスタに連絡してください！"
+msgstr "ディスクに書き込めません！ホスト責任者に相談して下さい！"
 
 # "upload_error_8"
 #, fuzzy
 msgid "PHP misconfiguration detected! Please contact the hostmaster for assistance! "
-msgstr "PHPミスコンフィギュレーションを検出しました！支援のためのホストマスタに連絡してください！"
+msgstr "不適切なPHP設定が検出されました！ホスト責任者に相談して下さい！"
 
 # "upload_limit_exceeded"
 #, fuzzy
 msgid "Upload limit exceeded"
-msgstr "アップロードリミットを超えました"
+msgstr "アップロードの制限を超えています。"
 
 # "wrong_password"
 #, fuzzy
 msgid "Wrong password; Action denied."
-msgstr "間違ったパスワード; アクション拒否されました。"
+msgstr "不正パスワード；アクションは否定されました。"
 
 # "x_does_not_exist"
 # Rendered as "%FILENAME% does not exist".
 #, fuzzy
 msgid "does not exist"
-msgstr "が存在しません"
+msgstr "存在しません"
 
 # "_exclamation"
 msgid "! "
