--- a/PO/phpMussel.en.po
+++ b/PO/phpMussel.en.po
@@ -1,6 +1,6 @@
 # phpMussel language data
-# Used by (PHP source): https://github.com/Maikuolan/phpMussel/blob/master/vault/lang/lang.en.inc
-# This file from: https://github.com/Maikuolan/phpMussel-extras/blob/master/PO/phpMussel-en.po
+# Used by (PHP source): https://github.com/Maikuolan/phpMussel/blob/master/vault/lang/lang.en.php
+# This file from: https://github.com/Maikuolan/phpMussel-extras/blob/master/PO/phpMussel.en.po
 msgid ""
 msgstr ""
 "MIME-Version: 1.0\n"
@@ -120,11 +120,29 @@ msgstr "phpMussel already enabled."
 msgid "plugins_directory_nonexistent"
 msgstr "Plugins directory doesn't exist!"
 
+msgid "quarantined_as"
+msgstr "Quarantined as \"/vault/quarantine/{QFU}.qfu\".\n"
+
 msgid "recursive"
 msgstr "Recursion depth limit exceeded"
 
 msgid "required_variables_not_defined"
 msgstr "Required variables aren't defined: Can't continue."
+
+msgid "SafeBrowseLookup_200"
+msgstr "Potentially harmful URL detected"
+
+msgid "SafeBrowseLookup_400"
+msgstr "API request error"
+
+msgid "SafeBrowseLookup_401"
+msgstr "API authorisation error"
+
+msgid "SafeBrowseLookup_503"
+msgstr "API service unavailable"
+
+msgid "SafeBrowseLookup_999"
+msgstr "Unknown API error"
 
 msgid "scan_aborted"
 msgstr "Scanning aborted!"
