--- a/PO/phpMussel.nl.po
+++ b/PO/phpMussel.nl.po
@@ -1,6 +1,6 @@
 # phpMussel language data
-# Used by (PHP source): https://github.com/Maikuolan/phpMussel/blob/master/vault/lang/lang.nl.inc
-# This file from: https://github.com/Maikuolan/phpMussel-extras/blob/master/PO/phpMussel-nl.po
+# Used by (PHP source): https://github.com/Maikuolan/phpMussel/blob/master/vault/lang/lang.nl.php
+# This file from: https://github.com/Maikuolan/phpMussel-extras/blob/master/PO/phpMussel.nl.po
 msgid ""
 msgstr ""
 "MIME-Version: 1.0\n"
@@ -120,11 +120,29 @@ msgstr "phpMussel al ingeschakeld."
 msgid "plugins_directory_nonexistent"
 msgstr "Plugins bestandsmap bestaat niet!"
 
+msgid "quarantined_as"
+msgstr "In quarantaine geplaatst als \"/vault/quarantine/{QFU}.qfu\".\n"
+
 msgid "recursive"
 msgstr "Recursie dieptelimiet overschreden"
 
 msgid "required_variables_not_defined"
 msgstr "Vereiste variabelen zijn niet gedefinieerd: Kan niet doorgaan."
+
+msgid "SafeBrowseLookup_200"
+msgstr "Potentieel schadelijke URL gedetecteerd"
+
+msgid "SafeBrowseLookup_400"
+msgstr "API aanvraag foute"
+
+msgid "SafeBrowseLookup_401"
+msgstr "API niet geautoriseerd"
+
+msgid "SafeBrowseLookup_503"
+msgstr "API dienst niet beschikbaar"
+
+msgid "SafeBrowseLookup_999"
+msgstr "Onbekende API fout"
 
 msgid "scan_aborted"
 msgstr "Scannen afgebroken!"
